--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,4 @@
----
+        ---
 output: github_document
 ---
 
@@ -37,6 +37,7 @@ In R, type the following lines:
 Then, you can enter:
 
 ``` r
+  options(repos = BiocManager::repositories())
   BiocManager::install("RiviereQuentin/WimtrapWeb",                     
     dependencies = TRUE,                     
     build_vignettes = TRUE,
